# usa_app_nlp

./: README.md  flake.nix
chatapp/: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
chatapp/scripts/: app.py  chat.py  test_chain.py
chatapp/src/chatapp/app/: base.py  chat.py  session.py  settings.py
pdfqa/: Makefile  docker-compose.yml  pyproject.toml
pdfqa/images/app/: Dockerfile
pdfqa/images/devapp/: Dockerfile
pdfqa/scripts/: app.py
pdfqa/src/pdfqa/app/: chat.py  header.py  load.py  session.py  text.py
pdfqa/src/pdfqa/model/: llm.py
ragqa/: Makefile  docker-compose.yml  pyproject.toml
ragqa/.streamlit/: config.toml
ragqa/images/app/: Dockerfile
ragqa/images/chroma/: Dockerfile
ragqa/images/test/: Dockerfile
ragqa/scripts/: app.py  embeddings.py  llm.py  rag.py  vdb.py
ragqa/src/ragqa/: chain.py  prompt.py  rag.py  vdb.py
ragqa/src/ragqa/app/: chat.py  header.py  load.py  session.py  text.py
sentan/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
sentan/scripts/: app.py  model.joblib  train.py
sentan/src/sentan/: data.py  eval.py  model.py  preprocessing.py
smry/: Makefile  docker-compose.yml  pyproject.toml
smry/.streamlit/: config.toml
smry/images/dev/: Dockerfile
smry/scripts/: app.py  default_summary.py  extractive_summary.py  rag_summary.py  test_url.py
smry/src/smry/: chain.py  load.py  model.py  summary.py
smry/src/smry/app/: base.py  header.py  load.py  session.py  summary.py  texts.py
smry/static/: style.css
